# passrus

./: .gitignore  Cargo.toml  README.md  main.bak.rs  pass_input.json  passrus_test  run_test_commands.sh
.cargo/: config.toml
src/: cryptman.rs  eee.rs  enc  main.rs  main.rs.bak  pass_input.json  passman.rs  test.bak  test.rs  tests.rs  tui.rs  w_salt_dec  w_salt_enc
test_commands/: createDbFile.json  entry.json  entry2.json  getEntries.json  newContainer.json  openDbFile.json
