[package]
name = "testtest"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
anyhow = "1.0"
rand = "0.8"
sha3 = "0.10.8"
hex-literal = "0.4.1"
argon2 = "0.5.3"
log = { version = "0.4.21", features = ["max_level_debug","release_max_level_warn","std","serde"]}
fenwick-tree = "0.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.85"
hex = "0.4.3"
base64 = "0.22.1"
